# launcher

./: .gitignore  Cargo.toml  Makefile  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
debian/: changelog  control  copyright  pop-launcher-system76-power.install  pop-launcher.install  pop-launcher.links  rules
plugins/: Cargo.toml
plugins/src/: lib.rs  main.rs
plugins/src/browser_bookmarks/: mod.rs  plugin.ron  utils.rs
plugins/src/browser_history/: mod.rs  plugin.ron
plugins/src/calc/: calc.js  mod.rs  plugin.desktop  plugin.ron
plugins/src/cosmic_toplevel/: mod.rs  plugin.desktop  plugin.ron  toplevel_handler.rs
plugins/src/desktop_entries/: graphics.rs  mod.rs  plugin.desktop  utils.rs
plugins/src/desktop_entries copy/: utils.rs
plugins/src/desktop_entries2/: mod.rs  plugin.ron
plugins/src/files/: files.js  mod.rs  plugin.desktop  plugin.ron
plugins/src/find/: mod.rs  plugin.desktop  plugin.ron
plugins/src/plugins/: mod.rs
plugins/src/plugins/calc/: plugin.ron
plugins/src/plugins/desktop_entries/: mod.rs  plugin.ron
plugins/src/plugins/files/: plugin.ron
plugins/src/plugins/find/: mod.rs
plugins/src/plugins/pop_shell/: mod.rs  plugin.ron
plugins/src/plugins/pulse/: pulse.js
plugins/src/plugins/recent/: plugin.ron
plugins/src/plugins/scripts/: mod.rs  plugin.ron
plugins/src/plugins/terminal/: plugin.ron  terminal.js
plugins/src/plugins/web/: web.js
plugins/src/pop_shell/: config.rs  mod.rs  plugin.desktop
plugins/src/pulse/: mod.rs  plugin.desktop  plugin.ron
plugins/src/recent/: mod.rs  plugin.desktop  plugin.ron  recent.js
plugins/src/scripts/: mod.rs  plugin.desktop
plugins/src/search/: app.rs  config.ron  config.rs  mod.rs  plugin.ron  util.rs
plugins/src/terminal/: mod.rs  plugin.desktop  plugin.ron
plugins/src/web/: config.ron  config.rs  mod.rs  plugin.desktop  plugin.ron
scripts/session/: lock-screen.sh  session-bios.sh  session-lock.sh  session-logout.sh  session-reboot.sh  session-shutdown.sh  session-suspend.sh
scripts/system76-power/: graphics-compute.sh  graphics-discrete.sh  graphics-hybrid.sh  graphics-integrated.sh
service/: Cargo.toml
service/src/: client.rs  lib.rs  priority.rs  recent.rs
service/src/plugins/: config.rs  help.rs  mod.rs
service/src/plugins/help/: mod.rs  plugin.desktop
src/: codec.rs  config.rs  lib.rs  main.rs  service.rs
src/plugins/: config.rs  help.rs  mod.rs
toolkit/: Cargo.toml
toolkit/examples/: man-pages-plugin.rs  plugin.desktop  plugin.ron
toolkit/src/: lib.rs  plugin_trait.rs
