[package]
name = "pop-launcher"
version = "1.2.4"
license = "MPL-2.0"
authors = ["Michael Aaron Murphy <michael@mmurphy.dev>"]
description = "Library for writing plugins and frontends for pop-launcher"
repository = "https://github.com/pop-os/launcher"
edition.workspace = true

[workspace]
members = ["bin", "plugins", "service", "toolkit"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.90"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
tracing = "0.1.40"
dirs = "5.0.1"
serde_with = "3.11.0"
futures = "0.3.31"
flume = "0.11.0"
toml = "0.8.19"
regex = "1.11.0"
ron = "0.8.1"
tokio = "1.40.0"
tokio-stream = "0.1.16"

[dependencies]
const_format = "0.2.33"
dirs.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

[profile.release]
lto = "fat"
panic = "abort"

[dependencies.tokio]
workspace = true
features = ["io-std", "io-util"]

[dependencies.tokio-stream]
workspace = true
features = ["io-util"]


# [patch.crates-io]
# freedesktop-desktop-entry = { path = "../freedesktop-desktop-entry" }

[patch."https://github.com/pop-os/cosmic-protocols"]
"cosmic-client-toolkit" = { git = "https://github.com/pop-os//cosmic-protocols" }
