[package]
name = "pop-launcher-plugins"
version = "1.2.3"
license = "GPL-3.0-only"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
publish = false

[dependencies]
async-pidfd = "0.1.4"
fork = "0.1.23"
freedesktop-desktop-entry = "0.6.0"
human_format = "1.1.0"
human-sort = "0.2.2"
new_mime_guess = "4.0.1"
pop-launcher = { path = "../" }
regex = "1.10.4"
ron = "0.8.1"
serde = "1.0.198"
serde_json = "1.0.116"
slab = "0.4.9"
strsim = "0.11.1"
tracing = "0.1.40"
urlencoding = "2.1.3"
zbus = "4.2.2"
zvariant = "4.1.1"
ward = "2.1.0"
url = "2.5.0"
sysfs-class = "0.1.3"
anyhow = "1.0.82"
flume = "0.11.0"
dirs = "5.0.1"
futures = "0.3.30"
bytes = "1.6.0"
recently-used-xbel = "1.0.0"

# dependencies cosmic toplevel
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "3bed072", features = [
    "calloop",
] }

# dependencies desktop entries
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.37.0"
features = ["fs", "io-std", "macros", "process", "rt"]
