[package]
name = "pop-launcher-plugins"
version = "1.2.3"
license = "GPL-3.0-only"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition.workspace = true
publish = false

[dependencies]
async-pidfd = "0.1.4"
fork = "0.1.23"
freedesktop-desktop-entry = "0.6.1"
human_format = "1.1.0"
human-sort = "0.2.2"
new_mime_guess = "4.0.1"
pop-launcher = { path = "../" }
regex.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
slab = "0.4.9"
strsim = "0.11.1"
tracing.workspace = true
urlencoding = "2.1.3"
zbus = "4.2.2"
zvariant = "4.1.1"
url = "2.5.0"
sysfs-class = "0.1.3"
anyhow.workspace = true
flume.workspace = true
dirs.workspace = true
futures.workspace = true
bytes = "1.6.0"
recently-used-xbel = "1.0.0"

# dependencies cosmic toplevel
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "3bed072", features = [
    "calloop",
] }

# dependencies desktop entries
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
workspace = true
features = ["fs", "io-std", "macros", "process", "rt"]
