[package]
name = "pop-launcher-plugins"
version = "1.2.4"
license = "GPL-3.0-only"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition.workspace = true
publish = false

[dependencies]
async-pidfd = "0.1.5"
fork = "0.2.0"
freedesktop-desktop-entry = "0.7.17"
human_format = "1.1.0"
human-sort = "0.2.2"
new_mime_guess = "4.0.4"
pop-launcher = { path = "../" }
regex.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
slab = "0.4.11"
strsim = "0.11.1"
tracing.workspace = true
urlencoding = "2.1.3"
zbus = "5.11.0"
zvariant = "5.7.0"
url = "2.5.7"
anyhow.workspace = true
flume.workspace = true
dirs.workspace = true
futures.workspace = true
bytes = "1.10.1"
recently-used-xbel = "1.1.0"

# dependencies cosmic toplevel
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
sctk = { package = "smithay-client-toolkit", version = "0.20.0", features = [
    "calloop",
] }

# dependencies desktop entries
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
workspace = true
features = ["fs", "io-std", "macros", "process", "rt"]
