[package]
name = "pop-launcher-service"
version= "1.2.3"
license = "MPL-2.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.82"
async-oneshot = "0.5.9"
async-trait = "0.1.80"
dirs = "5.0.1"
futures = "0.3.30"
futures_codec = "0.4.1"
gen-z = "0.1.0"
num_cpus = "1.16.0"
pop-launcher = { path = "../" }
regex = "1.10.4"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.7.0"
slab = "0.4.9"
strsim = "0.11.1"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["std", "fmt", "env-filter"] }
flume = "0.11.0"

[dependencies.tokio]
version= "1.37.0"
features = ["io-std", "process", "rt"]

[dependencies.tokio-stream]
version= "0.1.15"
features = ["io-util"]
