[package]
name = "pop-launcher-service"
version = "1.2.7"
license = "MPL-2.0"
edition.workspace = true

[dependencies]
async-oneshot = "0.5.9"
async-trait = "0.1.89"
clap = { version = "4.5.48", features = ["derive"] }
dirs.workspace = true
futures.workspace = true
gen-z = "0.1.0"
num_cpus = "1.17.0"
pop-launcher = { path = "../" }
regex.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.14.1"
slab = "0.4.11"
strsim = "0.11.1"
tracing.workspace = true
flume.workspace = true

[dependencies.tokio]
workspace = true
features = ["io-std", "process", "rt"]

[dependencies.tokio-stream]
workspace = true
features = ["io-util"]
