[package]
name = "pop-launcher-toolkit"
version = "0.1.0"
edition = "2021"
description = "A wrapper around pop-launcher, pop-launcher-service and pop-launcher-plugins types for writing plugins and frontends for pop-launcher."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher-plugins = { path = "../plugins"}
pop-launcher-service = { path = "../service"}
pop-launcher = { path = "../" }
async-trait = "0.1.58"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["std", "fmt", "env-filter"] }
dirs = "4.0.0"
futures = "0.3.25"

[dev-dependencies]
tokio = { version = "1", features = [ "rt" ] }
fork = "0.1.20"

[[example]]
name = "man-pages-plugin"
path = "examples/man-pages-plugin.rs"
