[package]
name = "pop-launcher-toolkit"
version = "1.2.7"
description = "A wrapper around pop-launcher, pop-launcher-service and pop-launcher-plugins types for writing plugins and frontends for pop-launcher."
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pop-launcher-plugins = { path = "../plugins" }
pop-launcher-service = { path = "../service" }
pop-launcher = { path = "../" }
async-trait = "0.1.89"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "std",
    "fmt",
    "env-filter",
] }
dirs = "6.0.0"
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
fork = "0.2.0"

[[example]]
name = "man-pages-plugin"
path = "examples/man-pages-plugin.rs"
